# google-cloud-dotnet

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .manifest  .release-please-manifest.json  .travis.yml  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  CommonResourcesConfig.json  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile.generator  ENVIRONMENT.md  GoogleApis.sln  GoogleApis.snk  NEWAPI.md  NuGet.Config  NuGet.config  PROCESSES.md  README.md  StripDesktopOnNonWindows.xml  TESTING.md  V1  appveyor.sh  appveyor.yml  asd  bigquery.html  broken-apis.txt  build.sh  buildocs.sh  buildrelease.sh  check-console.sh  checkcompatibility.sh  checkpackagecompatibility.sh  checkpackages.sh  clean.sh  (+43 more)
.config/: dotnet-tools.json
.github/: .OwlBot.lock.yaml  .OwlBot.yaml  CODEOWNERS  CONTRIBUTING.md  blunderbuss.yml  renovate.json
.kokoro/: README.md  autorelease.bat  autorelease.sh  bigtable-conformance.sh  build.bat  build.sh  builddocs.bat  builddocs.sh  cleantestdata.bat  cleantestdata.sh  pip-requirements.txt  populatesecrets.sh  release.bat  release.sh  requirements.in  requirements.txt  runintegrationtests.bat  runintegrationtests.sh  runintegrationtests_codecov.bat  runintegrationtests_codecov.sh  type-shell-output.bat  updateutilitydocs.bat  updateutilitydocs.sh  write-output-to-file.sh
0.1.0/: index.html
1.0.0-beta01/: index.html
tools/Google.Cloud.Tools.ReleaseManager.IntegrationTests/ContainerCommands/DockerTests/Configure-Passing/api-root/google/test/v3/: BUILD.bazel  service.yaml
(+134882 files in other folders)
